--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ classifiers = [
 dependencies = [
     "torch==2.1.2", "torchvision==0.16.2",
     "sentencepiece==0.1.99", "shortuuid",
-    "accelerate==0.27.2", "peft", "bitsandbytes",
-    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
+    "accelerate==0.27.2", "peft==0.11.1", "bitsandbytes",
+    "pydantic", "markdown2[all]", "numpy==1.24.4", "scikit-learn==1.2.2",
     "gradio==4.16.0", "gradio_client==0.8.1",
     "requests", "httpx==0.24.0", "uvicorn", "fastapi",
     "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
